@@ -2,6 +2,8 @@
 
 	* lilypond-mode.el: add shortcut for 2midi
 
+	* lilypond-font-lock.el: fontify lyrics
+
 2002-12-10  Rune Zedeler  <rz@daimi.au.dk>
 
 	* scm/drums.scm : use 1.7.x names.
